--- a/3.Evaluation.md
+++ b/3.Evaluation.md
@@ -35,6 +35,7 @@ Will we be able to make it succeed?
 * manageably sized problem
 * achievable timeline
 * minimum viable product
+* does it raise architectural issues that need to be addressed before it can succeed?
 
 Special considerations?
 * risk factors
