Add procedural notes

--- a/3.Evaluation.md
+++ b/3.Evaluation.md
@@ -46,3 +46,8 @@ Once we're past the transitional phase, We should plan evaluation
 reports that compile our review of the area and recommend for/against
 chartering work at this time. This report will help us to tell the story
 to our members and prospects when we move to chartering and beyond.
+
+## Procedural
+
+* [Advance notice to AC](https://www.w3.org/2015/Process-20150901/#WGCharterDevelopment) when team feel a WG charter is likely to be developed, we work with Comm to send formal advance notice to the AC 
+* Horizontal review: in this phase, team should request review of charter-in-development from a11y, i18n, arctec, privsec.
