--- a/3.Evaluation.md
+++ b/3.Evaluation.md
@@ -7,7 +7,7 @@
 
 A core part of our *Strategic* work is the evaluation of how proposed
 work serves the Web. In the "Evaluation" phase at the end of the funnel,
-we make the case whether work is ready to proceed to Chartering. At that
+we make the case whether work is ready to proceed to Chartering of a Recommendation-track deliverable. At that
 point, we need to identify:
 
 * Will this work help to lead the web to its full potential?
