--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -39,7 +39,9 @@ are reviewing and to respond early to suggestions and Formal Objections.
 
 When the review period closes, we'll prepare a disposition of comments
 and determine whether we need to make any changes to address suggestions
-or Objections. We'll bring this disposition to W3M, including a
+or Objections. If any changes are made, share the charter and diff from 
+what was sent for AC review with all who reviewed the charter. 
+We'll bring this disposition to W3M, including a
 recommendation whether any updates require a formal re-review or an
 email to those who participated in the review. When W3M approves, the
 Shepherd works with Comm to announce the chartering and then we hand the
