add links to charter template

--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -46,3 +46,5 @@ recommendation whether any updates require a formal re-review.
 When W3M approves, the
 Shepherd works with Comm to announce the chartering and then we hand the
 package to Project Management.
+
+(Further instructions in the charter template repo)[https://w3c.github.io/charter-drafts/].  (Template)[https://w3c.github.io/charter-drafts/charter-template.html]. (Source for template)[https://github.com/w3c/charter-drafts].
