--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -4,7 +4,7 @@
 
 # Chartering
 
-The (Process 5.2.3)[https://www.w3.org/Consortium/Process/#CharterReview] requires us to seek AC review of at least four weeks
+The [Process 5.2.3: Charter Review](https://www.w3.org/Consortium/Process/#CharterReview) requires us to seek AC review of at least four weeks
 for "every new or substantively modified Working Group or Interest Group
 charter."
 
