--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -4,9 +4,7 @@
 
 # Chartering
 
-The [Process 5.2.3: Charter Review](https://www.w3.org/Consortium/Process/#CharterReview) requires us to seek AC review of at least four weeks
-for "every new or substantively modified Working Group or Interest Group
-charter."
+The [Process 5.2.3: Charter Review](https://www.w3.org/Consortium/Process/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
 
 Chartering: We get to this stage when we have a pretty solid idea that
 there's standardization work to be done in an area, what that work looks
@@ -40,11 +38,7 @@ are reviewing and to respond early to suggestions and Formal Objections.
 When the review period closes, we'll prepare a disposition of comments
 and determine whether we need to make any changes to address suggestions
 or Objections. If any changes are made, share the charter and diff from 
-what was sent for AC review with all who reviewed the charter. 
-We'll bring this disposition to W3M, including a
-recommendation whether any updates require a formal re-review. 
-When W3M approves, the
-Shepherd works with Comm to announce the chartering and then we hand the
-package to Project Management.
+what was sent for AC review with all who reviewed the charter and [member-charters-review](https://lists.w3.org/Archives/Member/member-charters-review/) -- see [Guide](https://www.w3.org/Guide/process/charter.html#managing-changes) for more detail.
+When W3M approves, the Shepherd works with Comm to announce the chartering and then we hand the package to Project Management.
 
-(Further instructions in the charter template repo)[https://w3c.github.io/charter-drafts/].  (Template)[https://w3c.github.io/charter-drafts/charter-template.html]. (Source for template)[https://github.com/w3c/charter-drafts].
+[Further instructions in the charter template repo](https://w3c.github.io/charter-drafts/])  [Template](https://w3c.github.io/charter-drafts/charter-template.html). [Source for template](https://github.com/w3c/charter-drafts).
