--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -41,4 +41,4 @@ or Objections. If any changes are made, share the charter and diff from
 what was sent for AC review with all who reviewed the charter and [member-charters-review](https://lists.w3.org/Archives/Member/member-charters-review/) -- see [Guide](https://www.w3.org/Guide/process/charter.html#managing-changes) for more detail.
 When W3M approves, the Shepherd works with Comm to announce the chartering and then we hand the package to Project Management.
 
-[Further instructions in the charter template repo](https://w3c.github.io/charter-drafts/)  [Template](https://w3c.github.io/charter-drafts/charter-template.html). [Source for template](https://github.com/w3c/charter-drafts).
+[Further instructions in the charter template repo](https://w3c.github.io/charter-drafts/). [Guide](https://www.w3.org/Guide/process/charter.html). [Template](https://w3c.github.io/charter-drafts/charter-template.html). [Source for template](https://github.com/w3c/charter-drafts).
