--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -4,7 +4,7 @@
 
 # Chartering
 
-The [Process 5.2.3: Charter Review](https://www.w3.org/Consortium/Process/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
+The [Process 4.3: Charter Review](https://www.w3.org/2021/Process-20211102/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
 
 Chartering: We get to this stage when we have a pretty solid idea that
 there's standardization work to be done in an area, what that work looks
