--- a/2.Incubation.md
+++ b/2.Incubation.md
@@ -4,7 +4,7 @@
 
 # Incubation
 
-Incubation can happen in CGs, BGs, IGs, WGs, and outside of W3C.  
+[Incubation](https://www.w3.org/Guide/incubation.html) can happen in CGs, BGs, IGs, WGs, and outside of W3C.  
 
 We should track work in this phase, identify how much team support and
 guidance to give it, and watch for products that can be useful in
