--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -4,7 +4,7 @@
 
 # Chartering
 
-The [Process 4.3: Charter Review](https://www.w3.org/2021/Process-20211102/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
+The [Process 4.3: Charter Review](https://www.w3.org/2023/Process-20230612/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
 
 Chartering: We get to this stage when we have a pretty solid idea that
 there's standardization work to be done in an area, what that work looks
@@ -19,7 +19,7 @@ contact. He/she should also have a sense of the ecosystem support and probe
 for likely objections based on the advance notice. Our goal threshold is
 still to have 5% of the membership support a charter proposal, with no
 un-addressed objections, before we begin work. When we have a charter in
-this shape, we'll bring it to W3M for review.
+this shape, we'll bring it to TiLT for review.
 
 The Shepherd may solicit the help of another team member, for example 
 to contribute the editorial work; this is typically case when the Shepherd 
@@ -29,7 +29,7 @@ In other cases the Shepherd plays both the strategy and the editorial
 roles for the new charter, e.g., when the he/she is expected to be the 
 proposed staff contact as well.
 	
-Upon W3M approval (after responding to any questions raised there), the
+Upon TiLT approval (after responding to any questions raised there), the
 charter Shepherd works with Comm to post the proposed charter and
 prepare the AC notice and review form (WBS). You should monitor the WBS
 as the review period progresses to make sure that expected supporters
@@ -39,6 +39,6 @@ When the review period closes, we'll prepare a disposition of comments
 and determine whether we need to make any changes to address suggestions
 or Objections. If any changes are made, share the charter and diff from 
 what was sent for AC review with all who reviewed the charter and [member-charters-review](https://lists.w3.org/Archives/Member/member-charters-review/) -- see [Guide](https://www.w3.org/Guide/process/charter.html#managing-changes) for more detail.
-When W3M approves, the Shepherd works with Comm to announce the chartering and then we hand the package to Project Management.
+When TiLT approves, the Shepherd works with Comm to announce the chartering and then we hand the package to Project Management.
 
 [Further instructions in the charter template repo](https://w3c.github.io/charter-drafts/). [Guide](https://www.w3.org/Guide/process/charter.html). [Template](https://w3c.github.io/charter-drafts/charter-template.html). [Source for template](https://github.com/w3c/charter-drafts).
