Added more links

--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -4,7 +4,7 @@
 
 # Chartering
 
-The [Process 4.3: Charter Review](https://www.w3.org/2023/Process-20230612/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
+The [Process 4.3: Charter Review](https://www.w3.org/Consortium/Process/#CharterReview) requires us to seek AC review of at least four weeks for "every new or substantively modified Working Group or Interest Group charter." 
 
 Chartering: We get to this stage when we have a pretty solid idea that
 there's standardization work to be done in an area, what that work looks
@@ -29,8 +29,8 @@ In other cases the Shepherd plays both the strategy and the editorial
 roles for the new charter, e.g., when the he/she is expected to be the 
 proposed staff contact as well.
 	
-Upon TiLT approval (after responding to any questions raised there), the
-charter Shepherd works with Comm to post the proposed charter and
+Upon [TiLT approval](https://www.w3.org/Guide/process/tilt/#request) (after responding to any questions raised there), the
+charter Shepherd works with [Comm](https://www.w3.org/staff/comm/) to post the proposed charter and
 prepare the AC notice and review form (WBS). You should monitor the WBS
 as the review period progresses to make sure that expected supporters
 are reviewing and to respond early to suggestions and Formal Objections.
