--- a/4.Chartering.md
+++ b/4.Chartering.md
@@ -9,7 +9,10 @@ The [Process 4.3: Charter Review](https://www.w3.org/Consortium/Process/#Charter
 Chartering: We get to this stage when we have a pretty solid idea that
 there's standardization work to be done in an area, what that work looks
 like, and likely support from the stakeholders necessary for it to
-succeed. (We will have developed that at the previous, Evaluation stage.)
+succeed. The proposed work MUST support W3C's vision and W3C design principles
+(see [W3C mission](https://www.w3.org/mission/)), as well our various
+[principles](https://www.w3.org/TR/?filter-tr-name=principles). (We will
+have developed that at the previous, Evaluation stage.)
 
 One member of the Strategy team will act as Charter Shepherd. The
 Shepherd manages the development of the charter draft, including
