Updated charter refinement notice

--- a/3.Evaluation.md
+++ b/3.Evaluation.md
@@ -49,5 +49,5 @@ to our members and prospects when we move to chartering and beyond.
 
 ## Procedural
 
-* [Advance notice to AC](https://www.w3.org/2023/Process-20230612/#WGCharterDevelopment) when team feel a WG charter is likely to be developed, we send "advance notice" to the AC and public-new-work.
-* Horizontal review: in this phase, team should request review of charter-in-development from a11y, i18n, arctec, privsec.
+* [Charter refinement announcement to AC]([https://www.w3.org/2023/Process-20230612/#WGCharterDevelopment](https://www.w3.org/policies/process/#charter-initiation)) when team feel a WG charter is likely to be developed, we send "charter refinement notice" to the AC and public-new-work.
+* Horizontal review: in this phase, team should request review of charter-in-development from a11y, i18n, arctec, priv, sec.
